# showmaster-suite

./: .bp_server.py  .gitignore  LICENSE  README.md  USER_GUIDE.md  pyproject.toml
.github/workflows/: release.yml  test.yml
launchers/: BrowserPilot.bat  BrowserPilot.command  Showmaster.bat  Showmaster.command
scripts/: build.py
src/browserpilot/: cli.py  core.py  gui.py  memory.py  recorder.py
src/common/: gui_utils.py  logger.py  settings.py
src/showmaster/: cli.py  core.py  gui.py  templates.py
tests/: conftest.py  test_browserpilot_core.py  test_cli.py  test_showmaster_core.py
