[project]
name = "tools"
version = "0.1.0"
description = "Showmaster and BrowserPilot tools"
readme = "README.md"
authors = [
    { name = "manirm", email = "manirm@users.noreply.github.com" }
]
requires-python = ">=3.12.8"
dependencies = [
    "click>=8.3.1",
    "markdown2>=2.5.5",
    "playwright>=1.58.0",
    "wxpython>=4.2.5",
    "httpx>=0.27.0",
    "ollama>=0.2.1",
]

[project.scripts]
showmaster = "showmaster.cli:cli"
browserpilot = "browserpilot.cli:main_cli"
showmaster-gui = "showmaster.gui:main"
browserpilot-gui = "browserpilot.gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/showmaster", "src/browserpilot", "src/common"]
