[project]
name = "showmaster-suite"
version = "0.5.0"
description = "Showmaster: documentation tool + BrowserPilot: AI browser automation"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Mohammed Maniruzzaman, PhD", email = "manirm@users.noreply.github.com" }
]
requires-python = ">=3.12"
keywords = ["documentation", "browser-automation", "playwright", "AI", "demo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.3.1",
    "markdown2>=2.5.5",
    "playwright>=1.58.0",
    "wxpython>=4.2.5",
    "httpx>=0.27.0",
    "ollama>=0.2.1",
    "mss",
    "opencv-python",
    "numpy",
    "imageio",
    "zstandard",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
]
pdf = [
    "weasyprint>=62.0",
]
build = [
    "nuitka",
]

[project.urls]
Homepage = "https://github.com/manirm/showmaster-suite"
Repository = "https://github.com/manirm/showmaster-suite"
Issues = "https://github.com/manirm/showmaster-suite/issues"
Documentation = "https://github.com/manirm/showmaster-suite/blob/main/USER_GUIDE.md"

[project.scripts]
showmaster = "showmaster.cli:cli"
browserpilot = "browserpilot.cli:main_cli"
showmaster-gui = "showmaster.gui:main"
browserpilot-gui = "browserpilot.gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/showmaster", "src/browserpilot", "src/common"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that launch a real browser (deselect with '-m \"not slow\"')",
]
